# pandoras_box

./: .password  Cargo.toml  ]
.github/workflows/: build.yml
chimera/: .password  COMP_INIT.md  Cargo.toml  Makefile  build.rs  out.json
chimera/includes/: docker-compose.yml  install_docker.sh
chimera/src/: error.rs  logging.rs  main.rs  server.rs  types.rs  utils.rs
chimera/src/client/: client.rs  linux.rs  mod.rs  types.rs  utils.rs  windows.rs
chimera/src/modes/: mod.rs  serve.rs
chimera/src/modes/baseline/: mod.rs
chimera/src/modes/baseline/platform/: unix.rs
chimera/src/modes/baseline/platform/windows/: harden.rs  mod.rs  pwsh_update.rs  sysmon_installer.rs
chimera/src/modes/credentials/: mod.rs
chimera/src/modes/credentials/platform/: mod.rs  unix.rs  windows.rs
chimera/src/modes/inventory/: mod.rs
chimera/src/modes/inventory/platform/: mod.rs
chimera/src/modes/inventory/platform/unix/: connections.rs  mod.rs  services.rs  shares.rs  user.rs
chimera/src/modes/inventory/platform/windows/: connections.rs  services.rs  shares.rs  user.rs
docs/: CROSS_COMPILE_GUIDE.md
docs/analysis/: CCDC_TACTICAL_GUIDE.md  README.md  UCI_LOCS_ANALYSIS.md  UNKNOWN_TOOLS_ANALYSIS.md
lasso/: Cargo.toml
lasso/src/: main.rs
local-ip/: Cargo.toml
local-ip/src/: lib.rs
pandoras_box/: Cargo.toml  build.rs  chimera_application_log_10.100.136.121.json  chimera_application_log_10.100.136.30.json  chimera_application_log_10.100.136.43.json  chimera_application_log_10.100.136.66.json  chimera_application_log_10.100.136.7.json  chimera_application_log_10.100.136.73.json  chimera_application_log_10.100.136.84.json  chimera_inventory_10.100.136.121.json  chimera_inventory_10.100.136.30.json  chimera_inventory_10.100.136.43.json  chimera_inventory_10.100.136.66.json  chimera_inventory_10.100.136.7.json  chimera_inventory_10.100.136.73.json  chimera_inventory_10.100.136.84.json
pandoras_box/img/: Dockerfile
pandoras_box/img/winexe/: libdl.so.2
pandoras_box/src/: communicator.rs  config.rs  enumerator.rs  error.rs  lib.rs  logging.rs  main.rs  orchestrator.rs  orchestrator_tmp.rs  propagator.rs  types.rs
pandoras_box/src/api/: mod.rs  types.rs
pandoras_box/src/init/: init.rs
pandoras_box/src/net/: mod.rs  session_pool.rs  ssh.rs  types.rs  winexe.rs  winexe3.rs  winrm.rs
pandoras_box/src/net/communicator/: mod.rs
pandoras_box/src/net/enumeration/: ping.rs
pandoras_box/src/net/spread/: mod.rs  spreader.rs
pandoras_box/src/orchestrator/: orchestrator.rs
rustrc/: Cargo.toml  test.sh
rustrc/download_embed_macro/: Cargo.toml
rustrc/download_embed_macro/src/: lib.rs
rustrc/examples/: ssh_client.rs
rustrc/img/winexe-docker/: Dockerfile
rustrc/resources/: transfer_file.bat
rustrc/src/: client.rs  error.rs  lib.rs  macros.rs  smb.rs  stateful_process.rs  traits.rs  winexe.rs  winnew
rustrc/src/ssh/: mod.rs
scripts/: build_all.sh  build_and_release_chimera.sh  test_external_tools.sh
test/: Cargo.toml
test/src/: main.rs
