[package]
name = "chimera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
clap = {version = "4.4.11", features = ["cargo"]}
rand = "0.8.5"
reqwest = {version = "0.11.23", default-features = false, features = ["json", "rustls-tls", "blocking"]}
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sys-info = "0.9.1"
sysinfo = "0.29.11"
tokio = { version = "1.34.0", features = ["fs", "macros", "rt-multi-thread"] }
which = "5.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
local-ip = { path = "../local-ip" }
procfs = "0.16.0"

[target.'cfg(target_os = "windows")'.dependencies]
local-ip-address = "0.5.6"
netstat = "0.7.0"
wmi = "0.13.1"
regex = "1.10.2"
vc-ltl = "5.0.9"
netuser-rs = { git = "https://github.com/secur30nly/netuser-rs.git", branch = "main" }

[build-dependencies]
static_vcruntime = "2.0.0"

[target.x86_64-pc-windows-msvc]
linker = "x86_64-pc-windows-msvc"

[profile.release]
opt-level = 3

