[package]
name = "chimera"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
clap = {version = "4.5.20", features = ["cargo"]}
env_logger = "0.11.5"
futures = "0.3.31"
include-crypt = "0.1.1"
local-ip-address = "0.6.3"
log = "0.4.22"
once_cell = "1.20.2"
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
sys-info = "0.9.1"
sysinfo = "0.29.11"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3.14.0"
thiserror = "2.0.3"
tokio = {version = "1.41.1", features = ["full"]}
which = "7.0.0"
zeroize = { version = "1.8.1", features = ["derive"] }
zip = "2.2.2"

[target.'cfg(unix)'.dependencies]
procfs = "0.17.0"

# Windows only dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version= "0.59.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_NetworkManagement", 
    "Win32_NetworkManagement_NetManagement",
    "Win32_System_Services", "Win32_Foundation"] }
wmi = "0.14.2"
netstat = "0.7.0"

[profile.release]
opt-level = 3  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

