[package]
name = "pandoras_box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-ssh = "0.1.2"
async-trait = "0.1.74"
cc = "1.0.83"
flate2 = "1.0.27"
futures = "0.3.29"
libc = "0.2.148"
rand = "0.8.5"
reqwest = {version="0.11.20", features=["blocking"]}
smol = "1.3.0"
surge-ping = "0.5.2"
tar = "0.4.40"
tempfile = "3.8.0"
thrussh = "0.34.0"
thrussh-keys = "0.22.1"
tokio = {version = "1.32.0", features = ["full"]}
tokio-core = "0.1.18"
tokio-io = "0.1.13"
tokio-ssh2 = "0.0.1"

[profile.release]
opt-level = 3
