[package]
name = "pandoras_box"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
base64 = "0.21.5"
flate2 = "1.0.27"
futures = "0.3.29"
rand = "0.8.5"
reqwest = {version="0.11.20", features=["blocking"]}
surge-ping = "0.5.2"
tar = "0.4.40"
tempfile = "3.8.0"
thrussh = "0.34.0"
thrussh-keys = "0.22.1"
tokio = {version = "1.32.0", features = ["full"]}

[build-dependencies]
base64 = "0.21.5"
flate2 = "1.0.27"

[profile.release]
opt-level = 3
