[package]
name = "pandoras_box"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.17", features = ["cargo"]}
flate2 = "1.0.33"
futures = "0.3.30"
surge-ping = "0.5.2"
thiserror = "1.0.63"
tokio = {version = "1.40.0"}
rustrc = { path = "../rustrc" }
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.39"

[profile.release]
opt-level = 3  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
