[package]
name = "rustrc"
version = "0.1.0"
edition = "2021"

[features]
default = ["ssh", "winexe"]
ssh = ["russh", "russh-keys"]
winexe = ["nix"]

[dependencies]
nix = { version = "0.29.0", features = ["process", "signal"], optional = true}
async-trait = "0.1.79"
russh = { version = "0.43.0", optional = true }
russh-keys = { version = "0.43.0", optional = true }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
trait-variant = "0.1.2"
reqwest = "0.12.7"
download_embed_macro = { path = "./download_embed_macro" }
flate2 = "1.0.33"
rand = "0.8.5"
tar = "0.4.41"
serde_json = "1.0.128"

