[package]
name = "rustrc"
version = "0.1.0"
edition = "2021"

[features]
default = ["ssh", "winexe"]
ssh = ["russh", "russh-keys"]
winexe = ["nix"]
russh = ["dep:russh"]

[dependencies]
nix = { version = "0.29.0", features = ["process", "signal"], optional = true}
async-trait = "0.1.79"
russh = { version = "0.49.2", optional = true }
russh-keys = { version = "0.49.2", optional = true }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["fs", "process"] }
trait-variant = "0.1.2"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls"] }
download_embed_macro = { path = "./download_embed_macro" }
flate2 = "1.0.33"
rand = "0.8.5"
tar = "0.4.41"
serde_json = "1.0.128"
bytes = "1.7.2"
russh-sftp = "2.0.6"
byteorder = "1.5.0"
base64 = "0.22.1"
tracing = "0.1.41"
shell-escape = "0.1.5"
tracing-subscriber = "0.3.19"

