[package]
name = "parseingtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
regex = "1.10.2"
reqwest = {version="0.11.20",default-features = false, features = ["blocking", "rustls-tls"]}
sys-info = "0.9.1"
sysinfo = "0.30.3"
